crates/compiler/src/tests/e2e/good/0542_fn_apply_match_closure/main.gom
fn apply(f: (int32) -> int32, x: int32) -> int32 {
    f(x)
}

fn main() {
    let op = 1;
    let f: (int32) -> int32 = match op {
        1 => |x| x + 1,
        2 => |x| x * 2,
        _ => |x| x,
    };
    println(apply(f, 10).to_string());
}
